--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -25,8 +25,16 @@ jobs:
         run: |
           echo "HANA before everything"
           df -h
-          sudo du -sh /usr/* /var/* /home/* /imagegeneration/*
-          sudo find / -type f -size +1G
+          sudo du -sh /usr/* /var/* /home/* /imagegeneration/* /home/.cargo/* /var/cache/apt
+          echo "HANA deleting shit"
+          sudo apt-get -y clean
+          sudo apt-get -y autoremove
+          echo "HANA where are we now..."
+          df -h
+          echo "HANA ok find"
+          sudo find /home -type f -size +1G
+          sudo find /usr -type f -size +1G
+          sudo find /imagegeneration -type f -size +1G
           source ci/rust-version.sh
           echo "RUST_STABLE=$rust_stable" >> $GITHUB_ENV
           source ci/solana-version.sh
