--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "HANA before everything"
           df -h
-          sudo du -sh /usr/* /var/* /home/* /imagegeneration/* /home/.cargo/* /var/cache/apt
+          sudo du -sh /usr/* /var/* /home/* /imagegeneration/* /var/cache/apt
           echo "HANA deleting shit"
           sudo apt-get -y clean
           sudo apt-get -y autoremove
