--- a/.github/workflows/pull-request-token.yml
+++ b/.github/workflows/pull-request-token.yml
@@ -26,11 +26,10 @@ jobs:
           echo "HANA before everything"
           df -h
           # if we need more space: `sudo apt-get install -y wajig && wajig large`
-          sudo dpkg --remove ant mono-complete lldb-14 google-cloud-sdk azure-cli microsoft-edge-stable \
+          sudo apt-get purge -y -m --auto-remove google-cloud-sdk azure-cli microsoft-edge-stable \
               google-chrome-stable firefox powershell mono-devel dotnet-sdk-6.0 dotnet-sdk-7.0 \
               temurin-8-jdk temurin-11-jdk temurin-17-jdk llvm-12-dev llvm-13-dev llvm-14-dev \
               fake-canary-package
-          sudo apt-get -y autoremove
           sudo rm -rf /imagegeneration
           echo "HANA where now"
           df -h
