--- a/token/client/Cargo.toml
+++ b/token/client/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.6.0"
 
 [dependencies]
 async-trait = "0.1"
+curve25519-dalek = "3.2.1"
 futures = "0.3.28"
 futures-util = "0.3"
 solana-banks-interface = "1.16.3"
