--- a/libraries/tlv-account-resolution/Cargo.toml
+++ b/libraries/tlv-account-resolution/Cargo.toml
@@ -19,6 +19,9 @@ spl-type-length-value = { version = "0.3", path = "../type-length-value" }
 spl-pod = { version = "0.1", path = "../pod" }
 
 [dev-dependencies]
+futures = "0.3.28"
+futures-util = "0.3"
+solana-client = "1.16.13"
 solana-program-test = "1.16.13"
 solana-sdk = "1.16.13"
 spl-discriminator = { version = "0.1", path = "../discriminator" }
